JVMTI GenerateEvents() sends CompiledMethodLoad events to wrong jvmtiEnv

XMLWordPrintable

    • b17

        Consider two JVMTI agents subscribed to DynamicCodeGenerated and CompiledMethodLoad events.

        If one agents calls GenerateEvents(JVMTI_EVENT_COMPILED_METHOD_LOAD), the events will be received by both agents.

        However, if one agent calls GenerateEvents(JVMTI_EVENT_DYNAMIC_CODE_GENERATED), those events will be expectedly received only by this agent, and not by the second one.

        Seems like GenerateEvents behavior is inconsistent. CompiledMethodLoad events generated by the first agent should not be received by the second (unrelated) agent.

        To reproduce the bug compile the attached agents and run
        jcmd <pid> JVMTI.agent_load dupevent_1.dll
        jcmd <pid> JVMTI.agent_load dupevent_2.dll

              Assignee:
              Serguei Spitsyn
              Reporter:
              Andrei Pangin
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: